tests/NormalTests/paczka1/fuzzy1/66387711.err
Error in line 5: Ojbb S693 97,2
Error in line 21: S693 A940 45,6
Error in line 11: uL2CY4k S57 84,1
Error in line 31: k5OB3bprv7g A940 62,11
Error in line 24: S693 S693 98,3
